--- a/static/style.css
+++ b/static/style.css
@@ -1,36 +1,91 @@
+/* Estilos gerais */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    color: #333;
     margin: 0;
-    padding: 20px;
+    padding: 0;
 }
 
 .container {
+    width: 90%;
     max-width: 800px;
-    margin: auto;
+    margin: 20px auto;
     padding: 20px;
     background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
     text-align: center;
-    color: #0445f8;
+    color: #333;
 }
 
+/* Formulários */
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+input[type="text"], input[type="date"], select, textarea {
+    width: 100%;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+textarea {
+    resize: vertical;
+    min-height: 100px;
+}
+
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+input[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+/* Botões de navegação */
+.button, .button-back {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px 0;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.button:hover, .button-back:hover {
+    background-color: #0056b3;
+}
+
+/* Lista de tarefas */
 .task-list {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
 }
 
 .task-card {
-    background-color: #e9ecef;
-    margin-bottom: 15px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
     padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    margin-bottom: 15px;
 }
 
 .task-header {
@@ -39,76 +94,57 @@ h1 {
     align-items: center;
 }
 
-.button, .edit-button, .transfer-button, .delete-button {
-    display: inline-block;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    text-align: center;
+.task-header h4 {
+    margin: 0;
+}
+
+.task-header div a {
+    margin-right: 10px;
+    color: #007BFF;
     text-decoration: none;
+}
+
+.task-header div a:hover {
+    text-decoration: underline;
+}
+
+#edit-button {
+    text-decoration: none;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
-.button {
-    background-color: #007bff;
-    transition: background-color 0.3s;
-}
-
-.button:hover {
+#edit-button:hover {
     background-color: #0056b3;
 }
 
-.edit-button {
-    background-color: #007bff;
-}
-
-.edit-button:hover {
-    background-color: #0056b3;
-}
-
-.transfer-button {
+#transfer-button {
+    text-decoration: none;
     background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-.transfer-button:hover {
+#transfer-button:hover {
     background-color: #218838;
 }
 
 #delete-button {
-    background-color: #dc3545;
-}
-
-#delete-button:hover {
-    background-color: #c82333;
-}
-
-input[type="text"],
-input[type="date"],
-textarea,
-select {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    border: 1px solid #ced4da;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-
-input[type="submit"] {
-    background-color: #28a745; /* Verde */
+    background-color: #ff4d4d;
     color: white;
     border: none;
-    border-radius: 5px;
-    padding: 10px 15px;
+    padding: 5px 10px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
-input[type="submit"]:hover {
-    background-color: #218838; /* Verde escuro */
-}
-
-.task-header a {
-    margin-left: 10px;
+#delete-button:hover {
+    background-color: #ff3333;
 }
